# ELECTION

./: hi.py  pyproject.toml
election/: register_candidate.py  utils.py
tests/: __init__.py  register_c_1.py  voerwhite.py  voter.py  voter1.py  voter2.py  voternow.py  voting.py
